force-app/main/default/objects/Inbound_Content__c/Inbound_Content__c.object-meta.xml
<CustomObject>
    <label>Creative Content</label>
    <nameField>
        <label>Creative Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Creative Content</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>