force-app/main/default/objects/Inbound_Content__c/fields/Admin_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Admin_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin Trigger</label>
    <type>Checkbox</type>
</CustomField>