force-app/main/default/objects/Inbound_Content__c/fields/Approved_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Approved_Forecast__c</fullName>
    <description>Forecast if a piece of content is going to be approved.</description>
    <formula>IF( Revisions_Required__c =TRUE,TRUE,
IF(ISPICKVAL( Status__c ,&apos;Approved&apos;),TRUE,FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Forecast</label>
    <type>Checkbox</type>
</CustomField>