force-app/main/default/objects/Inbound_Content__c/fields/Asset_Package__c.field-meta.xml
<CustomField>
    <fullName>Asset_Package__c</fullName>
    <label>Asset Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>