force-app/main/default/objects/Inbound_Content__c/fields/Asset_Template__c.field-meta.xml
<CustomField>
    <fullName>Asset_Template__c</fullName>
    <formula>TEXT(Associated_Project__r.Asset_Template__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Template</label>
    <type>Text</type>
</CustomField>