force-app/main/default/objects/Inbound_Content__c/fields/Associated_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Associated_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Milestone</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a milestone associated with the Project</errorMessage>
        <filterItems>
            <field>amc__Milestone__c.amc__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Associated_Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>amc__Milestone__c</referenceTo>
    <relationshipLabel>Creative Content</relationshipLabel>
    <relationshipName>Creative_Content</relationshipName>
    <type>Lookup</type>
</CustomField>