force-app/main/default/objects/Inbound_Content__c/fields/Associated_Project__c.field-meta.xml
<CustomField>
    <fullName>Associated_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>amc__Project__c.amc__Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>amc__Project__c</referenceTo>
    <relationshipName>Inbound_Content</relationshipName>
    <type>Lookup</type>
</CustomField>