force-app/main/default/objects/Inbound_Content__c/fields/Auto_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approval_Date__c</fullName>
    <formula>DATEVALUE(  Submitted_to_Client_Date__c )+7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto-Approval Date</label>
    <type>Date</type>
</CustomField>