force-app/main/default/objects/Inbound_Content__c/fields/Auto_Approval_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approval_Forecast__c</fullName>
    <description>Forecast if a content piece will be auto-approved at the end of the month.</description>
    <formula>IF(AND(ISPICKVAL( Status__c ,&apos;Waiting on Client Approval&apos;), Revisions_Required__c = FALSE),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto-Approval Forecast</label>
    <type>Checkbox</type>
</CustomField>