force-app/main/default/objects/Inbound_Content__c/fields/Auto_Approval_Not_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approval_Not_Applicable__c</fullName>
    <description>Give visibility on the creative content record if the client has Auto-Approval Not Applicable on the account page.</description>
    <formula>Account__r.Auto_Approval_Not_Applicable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto-Approval Not Applicable</label>
    <type>Checkbox</type>
</CustomField>