force-app/main/default/objects/Inbound_Content__c/fields/Auto_Approved__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be used to identify if the content was approved automatically</description>
    <label>Auto-Approved</label>
    <type>Checkbox</type>
</CustomField>