force-app/main/default/objects/Inbound_Content__c/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <label>Categories</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>