force-app/main/default/objects/Inbound_Content__c/fields/Client_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_2__c</fullName>
    <label>Client Contact 2 Email</label>
    <type>Email</type>
</CustomField>