force-app/main/default/objects/Inbound_Content__c/fields/Client_Contact_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_2_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related to MyContent Client Contact 2 on the account page</description>
    <label>Client Contact 2</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please use a Client Contact record type. Reach out to your system admin for help.</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Creative Content (Client Contact 2 Phone)</relationshipLabel>
    <relationshipName>Creative_Content1</relationshipName>
    <type>Lookup</type>
</CustomField>