force-app/main/default/objects/Inbound_Content__c/fields/Client_Contact_2_Phone__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_2_Phone__c</fullName>
    <label>Client Contact 2 Phone</label>
    <type>Phone</type>
</CustomField>