force-app/main/default/objects/Inbound_Content__c/fields/Client_Content_Brief__c.field-meta.xml
<CustomField>
    <fullName>Client_Content_Brief__c</fullName>
    <description>Pulls Client Content Brief URL from associated amc project</description>
    <formula>Associated_Project__r.Client_Content_Brief__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Content Brief</label>
    <type>Text</type>
</CustomField>