force-app/main/default/objects/Inbound_Content__c/fields/Client_Feedback_2nd_Round__c.field-meta.xml
<CustomField>
    <fullName>Client_Feedback_2nd_Round__c</fullName>
    <label>Client Feedback - 2nd Round</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>