force-app/main/default/objects/Inbound_Content__c/fields/Client_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_Notes__c</fullName>
    <label>Client Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>