force-app/main/default/objects/Inbound_Content__c/fields/Client_Provided_Edits__c.field-meta.xml
<CustomField>
    <fullName>Client_Provided_Edits__c</fullName>
    <label>Client-Provided Edits</label>
    <type>Url</type>
</CustomField>