force-app/main/default/objects/Inbound_Content__c/fields/Collateral_Number__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Number__c</fullName>
    <label>Collateral Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>