force-app/main/default/objects/Inbound_Content__c/fields/Collateral_Type__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Type__c</fullName>
    <label>Collateral Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Brochure</fullName>
            </value>
            <value>
                <fullName>Case Study</fullName>
            </value>
            <value>
                <fullName>Company Folder</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Employee Spotlights</fullName>
            </value>
            <value>
                <fullName>Flyer</fullName>
            </value>
            <value>
                <fullName>Infographic</fullName>
            </value>
            <value>
                <fullName>Landing Page</fullName>
            </value>
            <value>
                <fullName>Letterhead &amp; Business Card</fullName>
            </value>
            <value>
                <fullName>Motion Graphic Video</fullName>
            </value>
            <value>
                <fullName>New Page</fullName>
            </value>
            <value>
                <fullName>Pitch Deck</fullName>
            </value>
            <value>
                <fullName>Postcard</fullName>
            </value>
            <value>
                <fullName>Poster</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Revisions Only</fullName>
            </value>
            <value>
                <fullName>Sell Sheet</fullName>
            </value>
            <value>
                <fullName>Social Cover</fullName>
            </value>
            <value>
                <fullName>Social Media Calendar</fullName>
            </value>
            <value>
                <fullName>Social Testimonial</fullName>
            </value>
            <value>
                <fullName>Stationary Card</fullName>
            </value>
            <value>
                <fullName>Stationary Cards</fullName>
            </value>
            <value>
                <fullName>Trade Show Pop Up</fullName>
            </value>
            <value>
                <fullName>Tri-Fold Brochure</fullName>
            </value>
            <value>
                <fullName>Web Page</fullName>
            </value>
            <value>
                <fullName>Web Page Refresh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>