force-app/main/default/objects/Inbound_Content__c/fields/Content_Auto_Approved__c.field-meta.xml
<CustomField>
    <fullName>Content_Auto_Approved__c</fullName>
    <formula>IF( Auto_Approved__c = TRUE,
&quot;Yes&quot;,
&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Content Auto-Approved</label>
    <type>Text</type>
</CustomField>