force-app/main/default/objects/Inbound_Content__c/fields/Content_Description__c.field-meta.xml
<CustomField>
    <fullName>Content_Description__c</fullName>
    <label>Content Description</label>
    <type>TextArea</type>
</CustomField>