force-app/main/default/objects/Inbound_Content__c/fields/Content_Intent__c.field-meta.xml
<CustomField>
    <fullName>Content_Intent__c</fullName>
    <inlineHelpText>Navigational: Keywords that contain brand names signal navigational intent, meaning a searcher knows precisly where they’re headed.
Informational: The searcher is willing to find out more about the concept. These could be good for developing “gated” content and collecting emails.
Transactional: These queries can represent both the purpose to buy and read more about the concept. 
Commercial: This type can also be referred to as buy now or high intent. It signifies a strong intention on the part of the</inlineHelpText>
    <label>Content Intent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Navigational</fullName>
            </value>
            <value>
                <fullName>Informational</fullName>
            </value>
            <value>
                <fullName>Transactional</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>