force-app/main/default/objects/Inbound_Content__c/fields/Content_Link__c.field-meta.xml
<CustomField>
    <fullName>Content_Link__c</fullName>
    <label>Content Link</label>
    <type>Url</type>
</CustomField>