force-app/main/default/objects/Inbound_Content__c/fields/Content_Link_Internal_Only__c.field-meta.xml
<CustomField>
    <fullName>Content_Link_Internal_Only__c</fullName>
    <label>Content Link - Internal Only</label>
    <type>Url</type>
</CustomField>