force-app/main/default/objects/Inbound_Content__c/fields/Content_Rating__c.field-meta.xml
<CustomField>
    <fullName>Content_Rating__c</fullName>
    <formula>IF(TEXT( Content_Score__c )=&quot;5&quot;,IMAGE(&quot;/img/samples/stars_500.gif&quot;, &quot;5 Stars&quot;), 
IF(TEXT(Content_Score__c )=&quot;4&quot;,IMAGE(&quot;/img/samples/stars_400.gif&quot;, &quot;4 Stars&quot;), 
IF(TEXT(Content_Score__c )=&quot;3&quot;,IMAGE(&quot;/img/samples/stars_300.gif&quot;, &quot;3 Stars&quot;), 
IF(TEXT(Content_Score__c )=&quot;2&quot;,IMAGE(&quot;/img/samples/stars_200.gif&quot;, &quot;2 Stars&quot;), 
IF(TEXT(Content_Score__c )=&quot;1&quot;,IMAGE(&quot;/img/samples/stars_100.gif&quot;, &quot;1 Star&quot;), 
IMAGE(&quot;/img/samples/stars_000.gif&quot;, &quot;0 Stars&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Content Rating</label>
    <type>Text</type>
</CustomField>