force-app/main/default/objects/Inbound_Content__c/fields/Content_Text__c.field-meta.xml
<CustomField>
    <fullName>Content_Text__c</fullName>
    <label>Content Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>