force-app/main/default/objects/Inbound_Content__c/fields/Copywriter__c.field-meta.xml
<CustomField>
    <fullName>Copywriter__c</fullName>
    <label>Copywriter</label>
    <type>Email</type>
</CustomField>