force-app/main/default/objects/Inbound_Content__c/fields/Countdown_to_Auto_Approval__c.field-meta.xml
<CustomField>
    <fullName>Countdown_to_Auto_Approval__c</fullName>
    <description>Daylight Savings Time adjust time to &apos;17:00:00&apos;. Regular Time to &apos;18:00:00&apos;</description>
    <formula>IF(OR(
RecordTypeId=&apos;0124A000001UU0Q&apos;,
RecordTypeId=&apos;0124A000001gzpq&apos;),
IF(
AND(Account__r.Auto_Approval_Not_Applicable__c = FALSE, NOT(ISBLANK(Auto_Approval_Date__c))),
IF(
(DATETIMEVALUE(Auto_Approval_Date__c) - NOW()) &gt; -0.70 ,
TEXT( FLOOR( (DATETIMEVALUE(TEXT(DATEVALUE(Submitted_to_Client_Date__c)+7)
+
&quot; &quot; +
&apos;17:00:00&apos;) - NOW())) ) &amp; &quot; days &quot;
&amp; TEXT( FLOOR( MOD((DATETIMEVALUE(TEXT(DATEVALUE(Submitted_to_Client_Date__c)+7)
+
&quot; &quot; +
&apos;17:00:00&apos;) - NOW()) * 24, 24 ) )) &amp; &quot; hours &quot;
&amp; TEXT( ROUND( MOD( (DATETIMEVALUE(TEXT(DATEVALUE(Submitted_to_Client_Date__c)+7)
+
&quot; &quot; +
&apos;17:00:00&apos;) - NOW()) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
TEXT(Status__c)
),
IF(Account__r.Auto_Approval_Not_Applicable__c = TRUE,
&quot;No Auto-Approval Process&quot;,
&quot; &quot; )),
IF(OR(RecordTypeId=&apos;0124A000001UU0B&apos;,RecordTypeId=&apos;0124A000001UU1iQAG&apos;),
IF(
AND(Account__r.Auto_Approval_Not_Applicable__c = FALSE, NOT(ISBLANK(Marketing_Collateral_Auto_Approval_Date__c))),
IF(
((DATETIMEVALUE(Marketing_Collateral_Auto_Approval_Date__c)+0.209) - NOW()) &gt; -0.80,
TEXT( FLOOR( (DATETIMEVALUE(TEXT(Marketing_Collateral_Auto_Approval_Date__c)
+
&quot; &quot; +
&apos;19:00:00&apos;) - NOW())) ) &amp; &quot; days &quot;
&amp; TEXT( FLOOR( MOD((DATETIMEVALUE(TEXT(Marketing_Collateral_Auto_Approval_Date__c)
+
&quot; &quot; +
&apos;19:00:00&apos;) - NOW()) * 24, 24 ) )) &amp; &quot; hours &quot;
&amp; TEXT( ROUND( MOD( (DATETIMEVALUE(TEXT(Marketing_Collateral_Auto_Approval_Date__c)
+
&quot; &quot; +
&apos;19:00:00&apos;) - NOW()) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
TEXT(Status__c)
),
IF(Account__r.Auto_Approval_Not_Applicable__c = TRUE,
&quot;No Auto-Approval Process&quot;,
&quot; &quot; ))
,&quot;0&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Countdown to Auto-Approval</label>
    <type>Text</type>
</CustomField>