force-app/main/default/objects/Inbound_Content__c/fields/Create_GoogleDoc__c.field-meta.xml
<CustomField>
    <fullName>Create_GoogleDoc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create GoogleDoc</label>
    <type>Checkbox</type>
</CustomField>