force-app/main/default/objects/Inbound_Content__c/fields/Current_PSR__c.field-meta.xml
<CustomField>
    <fullName>Current_PSR__c</fullName>
    <formula>Account__r.Current_PSR__r.FirstName + &quot; &quot; + Account__r.Current_PSR__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current PSR</label>
    <type>Text</type>
</CustomField>