force-app/main/default/objects/Inbound_Content__c/fields/Current_PSR_is_a_PAM__c.field-meta.xml
<CustomField>
    <fullName>Current_PSR_is_a_PAM__c</fullName>
    <formula>Account__r.Current_PSR__c = &apos;Partner Account Manager&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current PSR is a PAM</label>
    <type>Checkbox</type>
</CustomField>