force-app/main/default/objects/Inbound_Content__c/fields/Design_Editor__c.field-meta.xml
<CustomField>
    <fullName>Design_Editor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Design Editor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Creative_Content</relationshipName>
    <type>Lookup</type>
</CustomField>