force-app/main/default/objects/Inbound_Content__c/fields/Design_Editor_Email__c.field-meta.xml
<CustomField>
    <fullName>Design_Editor_Email__c</fullName>
    <label>Design Editor Email</label>
    <type>Email</type>
</CustomField>