force-app/main/default/objects/Inbound_Content__c/fields/Design_Edits__c.field-meta.xml
<CustomField>
    <fullName>Design_Edits__c</fullName>
    <label>Design Edits</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>