force-app/main/default/objects/Inbound_Content__c/fields/Design_Feedback_RTF__c.field-meta.xml
<CustomField>
    <fullName>Design_Feedback_RTF__c</fullName>
    <label>Design Feedback RTF</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>