force-app/main/default/objects/Inbound_Content__c/fields/Designer__c.field-meta.xml
<CustomField>
    <fullName>Designer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Graphic Designer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inbound_Content2</relationshipName>
    <type>Lookup</type>
</CustomField>