force-app/main/default/objects/Inbound_Content__c/fields/Designer_Edits_Applied_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Designer_Edits_Applied_Feedback__c</fullName>
    <label>Designer Edits Applied Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>