force-app/main/default/objects/Inbound_Content__c/fields/Designer_QA_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Designer_QA_Feedback__c</fullName>
    <label>Designer QA Feedback RTF</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>