force-app/main/default/objects/Inbound_Content__c/fields/Digital_Strategy_Only__c.field-meta.xml
<CustomField>
    <fullName>Digital_Strategy_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Strategy Only</label>
    <type>Checkbox</type>
</CustomField>