force-app/main/default/objects/Inbound_Content__c/fields/Draft_Link__c.field-meta.xml
<CustomField>
    <fullName>Draft_Link__c</fullName>
    <label>Draft Link</label>
    <type>Url</type>
</CustomField>