force-app/main/default/objects/Inbound_Content__c/fields/Draft_Link_Internal_Only__c.field-meta.xml
<CustomField>
    <fullName>Draft_Link_Internal_Only__c</fullName>
    <label>Draft Link - Internal Only</label>
    <type>Url</type>
</CustomField>