force-app/main/default/objects/Inbound_Content__c/fields/Editor__c.field-meta.xml
<CustomField>
    <fullName>Editor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Editor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inbound_Content1</relationshipName>
    <type>Lookup</type>
</CustomField>