force-app/main/default/objects/Inbound_Content__c/fields/Editor_Final_QA_Notes__c.field-meta.xml
<CustomField>
    <fullName>Editor_Final_QA_Notes__c</fullName>
    <label>Editor Final QA Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>