force-app/main/default/objects/Inbound_Content__c/fields/Edits_Round__c.field-meta.xml
<CustomField>
    <fullName>Edits_Round__c</fullName>
    <label>Edits Round</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Round</fullName>
                <default>true</default>
                <label>First Round</label>
            </value>
            <value>
                <fullName>Second Round</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>