force-app/main/default/objects/Inbound_Content__c/fields/Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to prevent MyContent fields on records from updating the client&apos;s email and records auto approving</description>
    <inlineHelpText>Used for clients still implementing website.</inlineHelpText>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>