force-app/main/default/objects/Inbound_Content__c/fields/Emails_with_this_Asset__c.field-meta.xml
<CustomField>
    <fullName>Emails_with_this_Asset__c</fullName>
    <label>Emails with this Asset</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intro 1</fullName>
            </value>
            <value>
                <fullName>Intro 2</fullName>
            </value>
            <value>
                <fullName>Intro 3</fullName>
            </value>
            <value>
                <fullName>No Interest</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Wait</fullName>
            </value>
            <value>
                <fullName>Nurture 1</fullName>
            </value>
            <value>
                <fullName>Nurture 2</fullName>
            </value>
            <value>
                <fullName>Nurture 3</fullName>
            </value>
            <value>
                <fullName>Nurture 4</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Not Uploaded</fullName>
            </value>
            <value>
                <fullName>Landing Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>