force-app/main/default/objects/Inbound_Content__c/fields/Embed_Code__c.field-meta.xml
<CustomField>
    <fullName>Embed_Code__c</fullName>
    <description>Marketing Video Record Type. Code needed to embed the video onto the Landing Page.</description>
    <label>Embed Code</label>
    <type>TextArea</type>
</CustomField>