force-app/main/default/objects/Inbound_Content__c/fields/External_Links__c.field-meta.xml
<CustomField>
    <fullName>External_Links__c</fullName>
    <label>External Links</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>