force-app/main/default/objects/Inbound_Content__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <inlineHelpText>Client provided feedback and edits.</inlineHelpText>
    <label>Client Feedback</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>