force-app/main/default/objects/Inbound_Content__c/fields/Final_Server_Path_Link__c.field-meta.xml
<CustomField>
    <fullName>Final_Server_Path_Link__c</fullName>
    <description>A link that leads to the server with all client assets that the producer can easily access.</description>
    <label>Final Server Path Link</label>
    <type>Url</type>
</CustomField>