force-app/main/default/objects/Inbound_Content__c/fields/Final_Video_Link__c.field-meta.xml
<CustomField>
    <fullName>Final_Video_Link__c</fullName>
    <description>Optimized video with the slate removed that is ready for the public eye that the client can download and utilize</description>
    <label>Final Video Link</label>
    <type>Url</type>
</CustomField>