force-app/main/default/objects/Inbound_Content__c/fields/Focused_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Focused_Keyword__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Focused Keyword</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Keyword__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Keyword__c</referenceTo>
    <relationshipName>Inbound_Content</relationshipName>
    <type>Lookup</type>
</CustomField>