force-app/main/default/objects/Inbound_Content__c/fields/Fulfillment_Type__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Type__c</fullName>
    <description>Types used to complete creative content</description>
    <inlineHelpText>Types used to complete creative content</inlineHelpText>
    <label>Fulfillment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abstrakt Copywriting Team</fullName>
            </value>
            <value>
                <fullName>Regie.ai</fullName>
            </value>
            <value>
                <fullName>Outsourced Content</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>