force-app/main/default/objects/Inbound_Content__c/fields/Funnel_Focus__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Focus__c</fullName>
    <description>used on Ongoing SEO Content</description>
    <inlineHelpText>Topic clusters are typically centered around a core page, pillar page, product page, or main entity page that clearly defines that concept. As a unit, a topic cluster works to answer all of the questions users may have about a specific subject area in your industry niche.</inlineHelpText>
    <label>Topic Cluster</label>
    <type>TextArea</type>
</CustomField>