force-app/main/default/objects/Inbound_Content__c/fields/Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Date__c</fullName>
    <formula>Account__r.Go_Live_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Website Go Live Date</inlineHelpText>
    <label>Go Live Date</label>
    <type>Date</type>
</CustomField>