force-app/main/default/objects/Inbound_Content__c/fields/Image_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Image_Recommendation__c</fullName>
    <label>Image Recommendation</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>