force-app/main/default/objects/Inbound_Content__c/fields/Internal_Links__c.field-meta.xml
<CustomField>
    <fullName>Internal_Links__c</fullName>
    <label>Internal Links</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>