force-app/main/default/objects/Inbound_Content__c/fields/Marketing_Collateral_Auto_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Collateral_Auto_Approval_Date__c</fullName>
    <description>Last day of the month used to in auto-approval count down for mycontent.</description>
    <formula>Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Collateral Auto-Approval Date</label>
    <type>Date</type>
</CustomField>