force-app/main/default/objects/Inbound_Content__c/fields/Marketing_Collateral_Count_Down__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Collateral_Count_Down__c</fullName>
    <description>Daylight Savings Time adjust time to &apos;17:00:00&apos;. Regular Time to &apos;18:00:00&apos;</description>
    <formula>IF(
AND(Account__r.Auto_Approval_Not_Applicable__c = FALSE, NOT(ISBLANK(Marketing_Collateral_Auto_Approval_Date__c))),
IF(
((DATETIMEVALUE(Marketing_Collateral_Auto_Approval_Date__c)+0.209) - NOW()) &gt; -0.80 ,
TEXT( FLOOR( ((DATETIMEVALUE(TEXT(Marketing_Collateral_Auto_Approval_Date__c)
+
&quot; &quot; +
&apos;19:00:00&apos;)+0.209) - NOW())) ) &amp; &quot; days &quot;
&amp; TEXT( FLOOR( MOD(((DATETIMEVALUE(TEXT(Marketing_Collateral_Auto_Approval_Date__c)
+
&quot; &quot; +
&apos;19:00:00&apos;)+0.209) - NOW()) * 24, 24 ) )) &amp; &quot; hours &quot;
&amp; TEXT( ROUND( MOD( ((DATETIMEVALUE(TEXT(Marketing_Collateral_Auto_Approval_Date__c)
+
&quot; &quot; +
&apos;19:00:00&apos;)+0.209) - NOW()) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
TEXT(Status__c)
),
IF(Account__r.Auto_Approval_Not_Applicable__c = TRUE,
&quot;No Auto-Approval Process&quot;,
&quot; &quot; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Collateral Countdown</label>
    <type>Text</type>
</CustomField>